--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 body {
     background-color: #E5E5E5;
 }
@@ -7,6 +8,7 @@ body {
     height: 475px;
     margin: 0 auto;
     background-color: white;
+    border-radius: 12px;
     padding: 8px;
 }
 
@@ -14,6 +16,23 @@ img {
     width: 100%;
     height: 215px;
     object-fit: cover;
+    padding-bottom: 16px;
+}
+
+.tag {
+    border: 1px solid #E5EAED;
+    padding: 8px;
+    border-radius: 20px;
+    color: #788697;
+    font-family: 'Raleway';
+    font-weight: 600;
+    margin: 0 10px 16px 16px;
+}
+
+h1 {
+    color: #0E2632;
+    font-family: 'Raleway';
+    font-weight: 600;
 }
 
 @media screen and (max-width: 480px) {
